Code in latex document

--- a/report/report.tex
+++ b/report/report.tex
@@ -89,5 +89,8 @@ The difference between Tahoe and Reno lies in the fact that when congestion occu
 \caption{Congestion window size and slow start threshold of main FTP application with TCP Reno}
 \label{ex2:question4}
 \end{figure}
+\newpage
+\section*{TCL code of exercise 2}
+\lstinputlisting{code.tcl}
 \end{document}
 
